--- a/styling.css
+++ b/styling.css
@@ -1,49 +1,91 @@
 body {
+    margin: 0;
+
+}
+#wrapper{
     display: grid;
-    grid-column: 1vw 6fr 1vw;
     grid-template-areas:
-        "nav nav nav"
-        "header header header"
+        " nav nav nav "
+        " header header header "
         " . aboutME . "
         " . aboutSite . "
         " . themes . "
-        "footer footer footer";
+        " footer footer footer ";
+    width: 100%;
+    height: 100%;
+}
+#navBar {
+    grid-area: nav;
+    color: #fff;
+    background: #000100;
+    height: 60px;
 }
 #navBar{
-    grid-area: nav;
-    background: #000100;
-    height: 40PX;
-    position: relative;
-    margin-top: 0;
+    display: inline-block;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 3fr 1fr;
+    grid-template-areas: " . logos . links . ";
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+ul li{
+    font-size: 28px;
+}
+#logoContainer{
+    grid-area: logos;
+    width: 100%;
+    height: 100%;
+    background-color: white;
 
+}
+#linkContainer {
+    grid-area: links;
+    display: grid;
+}
+a:link,
+a:visited {
+    background-color: #000100;
+    color: #fff;
+    padding: 14px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover,
+a:active {
+    background-color: #e9302c;
 }
 
 #header {
     grid-area: header;
-    height: 80px;
     background: #feee90;
-
 }
 
 #section-aboutME {
     grid-area: aboutME;
-    height: 80px;
     background: #ff0090;
 }
 
 #section-aboutSITE {
     grid-area: aboutSite;
-    height: 80px;
     background: #ff0f10;
 }
 
 #section-Themes {
     grid-area: themes;
-    height: 80px;
     background: #f33fff;
 }
+
 #footer {
     grid-area: footer;
-    height: 50px;
     background: #00ee00;
 }
