--- a/styling.css
+++ b/styling.css
@@ -11,20 +11,23 @@ body {
     grid-template-areas:
         " nav nav nav "
         " header header header "
-        " aboutME aboutME aboutME "
+        " . aboutME . "
         " . aboutSite . "
         " . themes . "
         " footer footer footer ";
+    grid-row-gap: 20px;
     width: 100%;
     height: 100%;
-    background: #F2F2F2;
+    background-color: #F2F2F2;
+    background-image: url(Assets/images/LARGE/1x/bodyBG.png);
+    background-blend-mode: color;
 }
 
 /*******NAVBAR SECTION**************/
 #navBar {
     grid-area: nav;
     color: #F2F2F2;
-    background: #2F2420;
+    background: #000100;
     padding: 3px;
     z-index: 1;
 }
@@ -53,6 +56,7 @@ body {
 }
 
 #logoContainer {
+    margin-top: 10%;
     grid-area: logos;
     width: 100%;
     height: 100%;
@@ -60,13 +64,13 @@ body {
 }
 
 #logo img {
-    margin-top: 0px;
     padding-top: 4px;
     height: 50px;
     left: 50%;
 }
 
 #linkContainer {
+    align-self: center;
     grid-area: links;
     display: grid;
     text-align: center;
@@ -74,7 +78,7 @@ body {
 
 #linkContainer a:link {
     color: #FAF6F3;
-    background-color: #2F2420;
+    background-color: #000100;
     padding: 14px 40px;
     text-decoration: none;
     display: inline-block;
@@ -82,7 +86,7 @@ body {
 
 #linkContainer a:visited {
     color: #FAF6F3;
-    background-color: #2F2420;
+    background-color: #000100;
     padding: 14px 40px;
     text-decoration: none;
     display: inline-block;
@@ -103,11 +107,12 @@ a:active {
 }
 
 #header img {
-    width: 100%;
+    width: 1920px;
+    height: 722px;
     align-self: center;
     margin: 0;
+    height: 722px;
 }
-
 #headerTextwrapper {
     overflow: hidden;
     position: absolute;
@@ -118,12 +123,13 @@ a:active {
 
 #headerTextwrapper h1 {
     font-size: 70px;
+    color: #e9302c;
+    background-color: #fffa;
 }
-
 /***************ABOUT ME SECTION************/
 #section-aboutME a:link,
 a:visited {
-    color: #2F2420;
+    color: #000100;
     text-decoration: none;
 }
 
@@ -140,40 +146,37 @@ a:visited {
 #btnAM {
     margin-top: 15px;
     background-color: #FADC3B;
-    width: 20%;
     font-size: 20px;
-    width: 20%;
+    width: 18%;
     margin: auto;
 }
 
 /***************ABOUT SITE SECTION************/
 #section-aboutSITE a:link,
 a:visited {
-    color: #2F2420;
+    color: #000100;
     text-decoration: none;
 }
 
 #section-aboutSITE {
     margin-top: 10px;
     grid-area: aboutSite;
-    color: #2F2420;
+    color: #000100;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     align-content: center;
     align-items: center;
     text-align: center;
     border: solid 2px #E9302C;
-
 }
 
-#section-aboutSITE :hover {}
+/*#section-aboutSITE :hover {}*/
 
 #btnAS {
     margin-top: 15px;
     background-color: #FADC3B;
-    width: 20%;
     font-size: 20px;
-    width: 20%;
+    width: 18%;
     margin: auto;
 }
 
@@ -181,7 +184,7 @@ a:visited {
 #section-Themes a:link,
 a:visited {
     color: #000100;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 #section-Themes :hover {
@@ -190,21 +193,22 @@ a:visited {
 
 #section-Themes {
     grid-area: themes;
-    background: #FAF6F3;
-    display: inline-block;
-    margin-top: 10px;
-
+    background: #F2F2F2;
+    border: solid 2px #FADC3B;
 }
 
 #section-Themes h2 {
+/*    color: 2F2420;*/
     color: 000100;
 }
 
 #themesTitle {
+    grid-area: themesTitle;
     text-align: center;
 }
 
 .themeContainers {
+    grid-area: container;
     display: grid;
     grid-gap: 0px;
     grid-template-columns: 1fr 3fr;
@@ -214,21 +218,25 @@ a:visited {
 
 .themesTxt {
     grid-area: txt;
-    padding-left: 10px;
+    padding-bottom:0px;
+    padding-left:20px;
+    padding-right:20px;
+    margin-top: 0px;
     vertical-align: middle;
-    text-align: center;
+    text-align: left;
 }
 
 .themeHeader {
+    margin: 0;
     grid-area: themeHeader;
     align-self: center;
     text-align: center;
-    vertical-align: middle;
+    display: block<
 }
-
 .themesImg {
     grid-area: img;
-    height: 200px; /* placeholder*/
+    height: 200px; /* placeholder height*/
+    width: 100%;
 }
 /***************FOOTER SECTION************/
 #footer {
@@ -236,5 +244,4 @@ a:visited {
     background: #000100;
     color: #FAF6F3;
 }
-
 /***************MEDIA QUERIES************/
