--- a/styling.css
+++ b/styling.css
@@ -215,6 +215,7 @@ a:visited {
     grid-area: themes;
     background: #F2F2F2;
     border: solid 2px #FADC3B;
+    width: 100%;
 }
 
 #section-Themes h2 {
