--- a/styling.css
+++ b/styling.css
@@ -334,6 +334,10 @@ a:visited {
         font-size: 20px;
     }
 
+    .themesTxt li {
+        font-size: 12px;
+    }
+
     #linkContainer ul li {
         font-size: 15px;
     }
@@ -445,6 +449,9 @@ a:visited {
     h2 {
         font-size: 14px;
     }
+    .themesTxt li {
+        font-size: 12px;
+    }
 
     #linkContainer ul li {
         font-size: 10px;
@@ -467,6 +474,7 @@ a:visited {
         background-image: url(Assets/images/LARGE/1x/bodyBG.png);
         background-blend-mode: color;
     }
+
     #linkContainer a:link {
         padding: 6px 2px;
     }
@@ -533,12 +541,14 @@ a:visited {
         grid-template-areas: "themeHeader";
         height: 140PX;
     }
+
     .themeHeader {
         display: block;
         width: 100%;
         margin-top: 40px;
         font-size: 20px;
     }
+
     .themesImg {
         display: none;
     }
