--- a/styling.css
+++ b/styling.css
@@ -252,9 +252,15 @@ a:visited {
 
 .themesImg {
     grid-area: img;
-    height: 200px;
-    /* placeholder height*/
-    width: 100%;
+    align-content: center;
+    align-items: center;
+}
+
+.themesImg img {
+    width: 90%;
+    display: block;
+    margin-left: 30px;
+    margin-bottom: 50px;
 }
 
 /***************FOOTER SECTION************/
@@ -299,6 +305,10 @@ a:visited {
     display: grid;
 }
 
+.articleSection img {
+    width: 800px;
+}
+
 .asImgDiv {
     align-items: center;
     align-content: center;
@@ -340,6 +350,10 @@ a:visited {
 
     #linkContainer ul li {
         font-size: 15px;
+    }
+
+    .articleSection li {
+        font-size: 12px;
     }
 
     #bodyWrapper {
@@ -435,6 +449,10 @@ a:visited {
         height: 263px;
         display: block;
     }
+
+    .articleSection img {
+        width: 600px;
+    }
 }
 
 @media screen and (max-width: 375px) {
@@ -449,6 +467,7 @@ a:visited {
     h2 {
         font-size: 14px;
     }
+
     .themesTxt li {
         font-size: 12px;
     }
@@ -553,8 +572,13 @@ a:visited {
         display: none;
     }
 
+
     .themesTxt {
         display: none;
+    }
+
+    .articleSection img {
+        width: 600px;
     }
 
     .footer {
@@ -567,7 +591,11 @@ a:visited {
     }
 
     .articleSection img {
-        width: 100px;
+        width: 200px;
         align-items: center;
     }
+}
+
+theme1MainImg {
+    width: 100%;
 }
