--- a/styling.css
+++ b/styling.css
@@ -4,6 +4,11 @@ body {
     margin: 0;
     padding: 0;
 }
+body h1, h2, h3, h4{
+    font-family: 'Oswald', sans-serif;
+}
+
+
 
 /*******NAVBAR SECTION**************/
 #navBar {
