--- a/styling.css
+++ b/styling.css
@@ -4,11 +4,9 @@ body {
     margin: 0;
     padding: 0;
 }
-body h1, h2, h3, h4{
+body h1, h2, h3, h4, li{
     font-family: 'Oswald', sans-serif;
 }
-
-
 
 /*******NAVBAR SECTION**************/
 #navBar {
@@ -85,17 +83,6 @@ a:active {
     background-color: #e9302c;
     color: #FAF6F3;
 }
-
-/*
-.footer {
-    display: block;
-    width: 100%;
-    position: absolute;
-    margin: 0;
-    background: #000100;
-    color: #FAF6F3;
-}
-*/
 
 /***************HOMEPAGE BELOW************/
 /***************HOMEPAGE BELOW************/
@@ -232,6 +219,7 @@ a:visited {
     grid-area: container;
     display: grid;
     grid-gap: 0px;
+    grid-row-gap: 0px;
     grid-template-columns: 1fr 3fr;
     grid-template-areas: "themeHeader img"
         ". txt";
@@ -253,12 +241,14 @@ a:visited {
     align-self: center;
     text-align: center;
     display: block;
+    padding-top: 99%;
 }
 
 .themesImg {
     grid-area: img;
     align-content: center;
     align-items: center;
+    padding-top: 10%;
 }
 
 .themesImg img {
@@ -326,7 +316,6 @@ a:visited {
     grid-area: footerAS;
     display: block;
     width: 100%;
-    position: absolute;
     margin: 0;
     margin-bottom: 0;
     background: #000100;
@@ -334,6 +323,7 @@ a:visited {
 }
 
 /*************THEMES LANDING PAGE BELOW************/
+
 
 /***************MEDIA QUERIES************/
 @media screen and (max-width: 768px) and (min-width: 375px) {
@@ -460,6 +450,7 @@ a:visited {
     }
 }
 
+
 @media screen and (max-width: 375px) {
     p {
         font-size: 12px;
@@ -560,16 +551,15 @@ a:visited {
         grid-area: container;
         width: 100%;
         display: grid;
-        grid-row-gap: 10px;
+        grid-row-gap: 1px;
         grid-template-columns: 1fr;
         grid-template-areas: "themeHeader";
-        height: 140PX;
     }
 
     .themeHeader {
         display: block;
-        width: 100%;
-        margin-top: 40px;
+        margin: 0px;
+        padding: 20px;
         font-size: 20px;
     }
 
@@ -582,12 +572,9 @@ a:visited {
         display: none;
     }
 
-    .articleSection img {
-        width: 600px;
-    }
-
     .footer {
         width: 100%;
+
     }
 
     .mainImg {
